[package]
name = "actix-zmq"
version = "0.1.0"
authors = ["disfenoid <disfenoid@waves>"]
edition = "2018"

[dependencies]
actix = "0.11.0-beta.3"
actix-rt = "2.1.0"
zmq = "0.9.2"
tokio = { version = "1.3.0", features = [ "macros", "rt", "signal" ] }
bytes = "1.0.1"
smallvec = "1.6.1"
futures-util = "0.3.13"
futures = "0.3.13"
actix-zmq-derive = { path = "actix-zmq-derive" }
